--- a/BAHIATOYS/estilo/corpo.css
+++ b/BAHIATOYS/estilo/corpo.css
@@ -10,7 +10,8 @@ section{
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     grid-gap: 3rem;
-}
+} 
+
 
 .home-text h1{
     margin: 20px 0px 20px;
@@ -43,6 +44,21 @@ section{
     font-size: 14px;
     font-weight: 600;
     transition: all .25s ease;
+}
+.btn-cards{
+    display: inline-block;
+    background: var(--main-color);
+    color: #fff;
+    padding: 13px 24px;
+    border-radius: 30px;
+    border: none;
+    font-size: 11px;
+    font-weight: 600;
+    transition: all .25s ease;
+    margin-top: 20px;
+}
+.btn-cards:hover{
+    box-shadow: 0px 15px 22px rgb(125 216 125 / 44%);
 }
 
 .btn:hover{
